CS463-Dayton-Davis-LabNotebook-W2

--- a/01-html/02-images.html
+++ b/01-html/02-images.html
@@ -1,14 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Exercise 02 - Images</title>
-  </head>
-  <body>
-    <main>
-      <!-- Add your code here -->
-    </main>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <title>Exercise 02 - Images</title>
+</head>
+
+<body>
+  <main>
+    <figure>
+      <img src="https://placekittens.com/200/150" width="200" height="150"
+        alt="A kitten sitting down faced towards the camera" />
+      <figcaption><strong>Kittens Rule!</strong></figcaption>
+    </figure>
+
+    <figure>
+      <img src="https://place-puppy.com/puppy/y:200/x:150" width="200" height="150"
+        alt="A puppy sitting down faced towards the camera" />
+      <figcaption><strong>Puppies Rule!</strong></figcaption>
+    </figure>
+  </main>
+</body>
+
 </html>
