--- a/02-a11y/01-form.html
+++ b/02-a11y/01-form.html
@@ -1,28 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>01 - Form</title>
-    <link rel="stylesheet" href="../_styles/styles.css" />
-  </head>
-  <body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>01 - Form</title>
+  <link rel="stylesheet" href="../_styles/styles.css" />
+</head>
+
+<body>
+  <main>
     <h1>01 - Form</h1>
     <form action="/submit">
-      <span>Name</span>
-      <input type="text" />
+      <label for="name">Name</label>
+      <input type="text" id="name" name="name" />
       <br /><br />
       <label>
         Email
         <input type="text" />
       </label>
       <br /><br />
-      <span>Favorite Character</span>
-      <div><input type="radio" id="spongebob" />Spongebob</div>
-      <div><input type="radio" id="patrick" />Patrick</div>
-      <div><input type="radio" id="sandy" />Sandy</div>
-      <br />
-      <button>Submit</button>
+      <fieldset>
+        <legend>Favorite Character</legend>
+        <div>
+          <input type="radio" id="spongebob" name="favoriteCharacter" />
+          <label for="spongebob">Spongebob</label>
+        </div>
+        <div>
+          <input type="radio" id="patrick" name="favoriteCharacter" />
+          <label for="patrick">Patrick</label>
+        </div>
+        <div>
+          <input type="radio" id="sandy" name="favoriteCharacter" />
+          <label for="sandy">Sandy</label>
+        </div>
+      </fieldset>
+      <button type="submit">Submit</button>
     </form>
-  </body>
+  </main>
+</body>
+
 </html>
